@@ -1,4 +1,4 @@
-$Id: changelog,v 1.10 2002/11/23 14:48:58 alfred Exp $
+$Id: changelog,v 1.11 2003/02/02 13:33:52 alfred Exp $
 ------------------------------------------------------------------------------
 v1.41r3 Aenderungen: (-->v1.41r4beta)
 
@@ -903,3 +903,14 @@ v1.41r8 Aenderungen: (-->v1.42beta)
 - Extension   : improved structure handling, added unions
 
 - Extension   : DC allows ? as operand
+
+2003-02-02 [Bld 25]
+
+- Extension   : added EXPRTYPE function
+
+- Bugfix      : in case-sensitive mode, IRP arguments were converted
+                to uppercase
+
+- Bugfix      : 4004 JCN instruction did not allow multiple conditions
+
+- Extension   : allow line continuation
